Updating available slides

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ Reflection tasks Assessment Criteria.docx
 Resources/CSL_Participants.md
 
 Slides/2-Overview-BushTuringEnglebart.key
+
+.DS_Store
+
+.DS_Store
