--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Slides/2-Overview-BushTuringEnglebart.key
 .DS_Store
 
 .DS_Store
+
+Resources/Eisenhower Farewell Address (Best Quality) - Military Industrial Complex WARNING [HD, 720p].mp4
