Adding Filename Guidelines

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ Slides/2-Overview-BushTuringEnglebart.key
 
 .DS_Store
 
-.DS_Store
-
 Resources/Eisenhower Farewell Address (Best Quality) - Military Industrial Complex WARNING [HD, 720p].mp4
+
+DraftWriting/
