ignore class list

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Slides/2-Overview-BushTuringEnglebart.key
 Resources/Eisenhower Farewell Address (Best Quality) - Military Industrial Complex WARNING [HD, 720p].mp4
 
 DraftWriting/
+
+1570_66427.csv
