--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ Slides/2-Overview-BushTuringEnglebart.key
 
 Resources/Eisenhower Farewell Address (Best Quality) - Military Industrial Complex WARNING [HD, 720p].mp4
 
-DraftWriting/
+Writing/
 
 Assessment/
 
